--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Project Configuration File
+AsyncTCP; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,3 +12,4 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+lib_deps = esphome/ESPAsyncWebServer-esphome@^3.1.0
