--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-AsyncTCP; PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,4 +12,14 @@ AsyncTCP; PlatformIO Project Configuration File
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = esphome/ESPAsyncWebServer-esphome@^3.1.0
+board_build.filesystem = littlefs
+board_build.f_flash = 80000000L
+board_upload.flash_size = 4MB
+board_build.partitions = table_partition_4mb.csv
+upload_speed = 921600
+monitor_speed = 115200
+lib_deps = 
+	esphome/ESPAsyncWebServer-esphome@^3.1.0
+	ayushsharma82/AsyncElegantOTA@^2.2.8
+	gyverlibs/GParser@^1.5
+	gyverlibs/FastBot@^2.26
